[package]
name = "compactorsrenderingcommon"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compactorsanim = {path = "../compactorsanim"}
ggez = "0.6.1"
renderingcommon = {path = "../renderingcommon"}
rand_distr = "0.4.2"
rand = "0.8.4"
