[package]
name = "distrendering"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compactorsanim = {path = "../compactorsanim"}
distanim = {path = "../distanim"}
ggez = "0.6.1"
rand = "0.8.4"
rand_distr = "0.4.2"
png = "0.17.2"
renderingcommon = {path="../renderingcommon"}
lazy_static = "1.4.0"