[package]
name = "parallelrendering"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compactorsanim = {path = "../compactorsanim"}
compactorsrenderingcommon = {path = "../compactorsrenderingcommon"}
ggez = "0.6.1"
renderingcommon = {path = "../renderingcommon"}
rand = "0.8.4"
rand_distr = "0.4.2"
png = "0.17.2"
itertools = "0.10.1"